--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "choumx@ampproject.org",
   "license": "Apache-2.0",
   "dependencies": {
+    "eslint": "^4.4.1",
     "express": "^4.15.2",
     "formidable": "^1.1.1"
   }
